--- a/SportsStore.WebUI/Views/Product/List.cshtml
+++ b/SportsStore.WebUI/Views/Product/List.cshtml
@@ -9,11 +9,7 @@
 
 @foreach (Product p in Model.Products)
 {
-	<div class="item">
-		<h3>@p.Name</h3>
-		@p.Description
-		<h4>@p.Price.ToString("c")</h4>
-	</div>
+	Html.RenderPartial("ProductSummary", p);
 }
 
 <div class="pager">
