--- a/SportsStore.WebUI/Content/Site.css
+++ b/SportsStore.WebUI/Content/Site.css
@@ -60,6 +60,7 @@ textarea {
     display: none;
 }
 
+/* Product List Styles*/
 BODY { font-family: Cambria, Georgia, "Times New Roman"; margin: 0; }
 DIV#header DIV.title, DIV.item H3, DIV.item H4, DIV.pager A {
 font: bold 1em "Arial Narrow", "Franklin Gothic Medium", Arial;
@@ -78,3 +79,33 @@ DIV.pager A { font-size: 1.1em; color: #666; text-decoration: none;
 padding: 0 .4em 0 .4em; }
 DIV.pager A:hover { background-color: Silver; }
 DIV.pager A.selected { background-color: #353535; color: White; }
+
+
+/* Category Styles*/
+DIV#categories A
+{
+font: bold 1.1em "Arial Narrow","Franklin Gothic Medium",Arial; display: block;
+text-decoration: none; padding: .6em; color: Black;
+border-bottom: 1px solid silver;
+}
+DIV#categories A.selected { background-color: #666; color: White; }
+DIV#categories A:hover { background-color: #CCC; }
+DIV#categories A.selected:hover { background-color: #666; }
+
+/* Add to Cart Button */
+FORM { margin: 0; padding: 0; }
+DIV.item FORM { float:right; }
+DIV.item INPUT {
+color:White; background-color: #333; border: 1px solid black; cursor:pointer;
+}
+
+/* Cart Table*/}
+H2 { margin-top: 0.3em }
+TFOOT TD { border-top: 1px dotted gray; font-weight: bold; }
+tbody td.quantity { text-align: center; }
+tbody td.price, tbody td.subtotal { text-align: right; }
+.actionButtons A, INPUT.actionButtons {
+font: .8em Arial; color: White; margin: .5em;
+text-decoration: none; padding: .15em 1.5em .2em 1.5em;
+background-color: #353535; border: 1px solid black;
+}
