--- a/SportsStore.WebUI/Views/Cart/Index.cshtml
+++ b/SportsStore.WebUI/Views/Cart/Index.cshtml
@@ -45,4 +45,5 @@
 </table>
 <p class="actionButtons">
 	<a href="@Model.ReturnUrl">Continue Shopping</a>
+	@Html.ActionLink("Checkout Now", "Checkout")
 </p>
