--- a/SportsStore.WebUI/Views/Admin/Edit.cshtml
+++ b/SportsStore.WebUI/Views/Admin/Edit.cshtml
@@ -9,8 +9,17 @@
 
 <h1>Edit @Model.Name</h1>
 
-@using (Html.BeginForm("Edit", "Admin")) {
+@using (Html.BeginForm("Edit", "Admin", FormMethod.Post, new { enctype = "multipart/form-data" })) {
 	@Html.EditorForModel()
+
+	<div class="editor-label">Image</div>
+	<div class="editor-field">
+		@if (Model.ImageData != null) {
+			<img width="150" height="150" src="@Url.Action("GetImage", "Product", new { Model.ProductID })" />
+		}
+		<div>Upload new imag: <input type="file" name="image" /></div>
+	</div>
+
 	<input type="submit" value="Save" />
 	@Html.ActionLink("Cancel and return to List", "Index")
 }
