--- a/SportsStore.WebUI/Views/Cart/Checkout.cshtml
+++ b/SportsStore.WebUI/Views/Cart/Checkout.cshtml
@@ -30,6 +30,8 @@ Please enter your details, and we'll ship your goods right away!
 		Gift wrap these items
 	</label>
 	
+	<div>Shipping: @Html.EditorFor(x => x.ShippingType)</div>
+	
 	<p>
 		<input class="actionButtons" type="submit" value="Complete Order" />
 	</p>
