testing out relative css paths

--- a/SportsStore.WebUI/Content/Common.less
+++ b/SportsStore.WebUI/Content/Common.less
@@ -56,3 +56,11 @@ textarea {
 .validation-summary-valid {
 	display: none;
 }
+
+/*.title {
+	background-image: url("~/Content/Images/SportsLogo.jpg");
+	background-repeat: no-repeat;
+	background-size: 10%;
+	background-position: center -12px;
+	height: 40px;
+}*/
