--- a/SportsStore.WebUI/Content/Products.less
+++ b/SportsStore.WebUI/Content/Products.less
@@ -1,4 +1,6 @@
 ﻿// Product List Styles
+@darkGrey: #333;
+
 body {
 	font-family: Cambria, Georgia, "Times New Roman";
 	margin: 0;
@@ -81,7 +83,7 @@ body {
 
 		input {
 			color: White;
-			background-color: #333;
+			background-color: @darkGrey;
 			border: 1px solid black;
 			cursor: pointer;
 		}
