--- a/SportsStore.WebUI/Views/Shared/_Layout.cshtml
+++ b/SportsStore.WebUI/Views/Shared/_Layout.cshtml
@@ -8,11 +8,12 @@
     @Scripts.Render("~/bundles/modernizr")
 	@Styles.Render("~/Light")
 	@Styles.Render("~/Dark")
+	@Styles.Render("~/Logo")
 </head>
 <body>
 	<div id="header">
 		@{ Html.RenderAction("Summary", "Cart"); }
-		<div class="title">SPORTS STORE</div>
+		<div class="title"></div>
 	</div>
 	<div id="categories">
 		@{ Html.RenderAction("Menu", "Nav"); }
