relative css path testing
need to see if these work with virtual directories

--- a/SportsStore.WebUI/Content/Common.less
+++ b/SportsStore.WebUI/Content/Common.less
@@ -57,10 +57,10 @@ textarea {
 	display: none;
 }
 
-/*.title {
-	background-image: url("~/Content/Images/SportsLogo.jpg");
+.title {
+	background-image: url("/Content/Images/SportsLogo.jpg");
 	background-repeat: no-repeat;
 	background-size: 10%;
 	background-position: center -12px;
 	height: 40px;
-}*/
+}
