--- a/SportsStore.WebUI/Content/logo.css
+++ b/SportsStore.WebUI/Content/logo.css
@@ -1,6 +1,6 @@
 ﻿
 .title {
-	background-image: url("~/Content/Images/SportsLogo.jpg");
+	background-image: url("/Content/Images/SportsLogo.jpg");
 	background-repeat: no-repeat;
 	background-size: 10%;
 	background-position: center -12px;
