--- a/SportsStore.WebUI/Views/Shared/_Layout.cshtml
+++ b/SportsStore.WebUI/Views/Shared/_Layout.cshtml
@@ -8,7 +8,8 @@
     @Scripts.Render("~/bundles/modernizr")
 	@Styles.Render("~/Light")
 	@Styles.Render("~/Dark")
-	@Styles.Render("~/Logo")
+	@*@Styles.Render("~/Logo")*@
+	@*<link rel="stylesheet" type="text/css" href="~/Content/logo.css" />*@
 </head>
 <body>
 	<div id="header">
